--- a/src/app/src/main/res/layout/activity_user_page.xml
+++ b/src/app/src/main/res/layout/activity_user_page.xml
@@ -7,9 +7,24 @@
     android:padding="8dp"
     tools:context=".Activities.UserPage">
 
+    <ProgressBar
+        android:id="@+id/pbUserPage"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="433dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
 
         <ScrollView
@@ -29,9 +44,10 @@
                     android:layout_height="160dp">
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/cardView"
+                        android:id="@+id/cvUserPic"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
+                        android:clickable="true"
                         app:cardCornerRadius="100dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +69,7 @@
                         android:textSize="25sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toTopOf="@+id/useremail"
-                        app:layout_constraintStart_toEndOf="@+id/cardView" />
+                        app:layout_constraintStart_toEndOf="@+id/cvUserPic" />
 
                     <TextView
                         android:id="@+id/useremail"
@@ -63,7 +79,7 @@
                         android:text="sample@gmail.com"
                         android:textColor="@color/gray"
                         android:textSize="17sp"
-                        app:layout_constraintStart_toEndOf="@+id/cardView"
+                        app:layout_constraintStart_toEndOf="@+id/cvUserPic"
                         app:layout_constraintTop_toBottomOf="@+id/username" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -74,9 +90,11 @@
                     android:orientation="vertical">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/clUserProfile"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/grey_background">
+                        android:background="@drawable/grey_background"
+                        android:clickable="true">
 
                         <ImageView
                             android:id="@+id/imageView6"
@@ -109,10 +127,12 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/clUserFavorite"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
-                        android:background="@drawable/grey_background">
+                        android:background="@drawable/grey_background"
+                        android:clickable="true">
 
                         <ImageView
                             android:id="@+id/imageView6"
@@ -145,10 +165,12 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/clUserMessage"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
-                        android:background="@drawable/grey_background">
+                        android:background="@drawable/grey_background"
+                        android:clickable="true">
 
                         <ImageView
                             android:id="@+id/imageView6"
@@ -171,6 +193,42 @@
 
                         <ImageView
                             android:id="@+id/imageView15"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="20dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/icon_arrow_enter" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/clUserProduct"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/grey_background"
+                        android:clickable="true">
+
+                        <ImageView
+                            android:id="@+id/imageView16"
+                            android:layout_width="40dp"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/icon_document" />
+
+                        <TextView
+                            android:id="@+id/textView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="10dp"
+                            android:text="Product"
+                            android:textSize="20dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/imageView16"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <ImageView
+                            android:id="@+id/imageView17"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="20dp"
